# lab_power_display - Cargo.toml

[package]
name = "lab_power_display"
version = "0.2.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"


[[bin]]
name = "lab_power_display"
test = false
bench = false


[features]
default = []
debug = []


[dependencies]
arduino-hal = { git = "https://github.com/rahix/avr-hal", features = ["arduino-nano"] }
ads1x1x = "0.2"
embedded-hal = "1"
max7219 = "0.4"
nb = "1.1"
panic-halt = "1"
ufmt = "0.2"


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"


[profile.release]
panic = "abort"
codegen-units = 1
debug = false
lto = true
opt-level = "s"

# EOF
